Allow write packages

--- a/.github/workflows/container_images.yml
+++ b/.github/workflows/container_images.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   push_to_reg:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
